--- a/views/loginerror.hbs
+++ b/views/loginerror.hbs
@@ -1,16 +1,4 @@
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.7/handlebars.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="main.js"></script>
-    <title>Document</title>
-  </head>
-  <body>
-<div class="container my-5">
+<<div class="container my-5">
   <div class="jumbotron">
 
     <h1>Login</h1>
@@ -30,6 +18,3 @@
 
   </div>
 </div>
-  </body>
-  
-</html>
