--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,14 +1,17 @@
-<<div class="container my-5">
+
+<div class="container my-5">
   <div class="jumbotron">
 
     <h1>REGISTER</h1>
     <br />
     <form
       class="form"
+      id="form"
       action="/register"
       method="post"
       role="form"
       autocomplete="off"
+ onsubmit="process(event)"
     >
 
       <div class="form-group">
@@ -18,7 +21,7 @@
           placeholder="email"
           class="form-control"
           type="text"
-          required
+        
         />
       </div>
 
@@ -29,14 +32,75 @@
           placeholder="password"
           class="form-control"
           type="password"
-          required
+        
+        />
+      </div>
+    
+      <div class="form-group">
+        <input
+          id="nombre"
+          name="nombre"
+          placeholder="Hombre y Apellido"
+          class="form-control"
+          type="text"
+        
+        />
+      </div>
+     <div class="form-group">
+        <input
+          id="direccion"
+          name="direccion"
+          placeholder="Direccion"
+          class="form-control"
+          type="text"
+        
+        />
+      </div>
+           <div class="form-group">
+        <input
+          id="edad"
+          name="edad"
+          placeholder="Edad"
+          class="form-control"
+          type="number"
+        
         />
       </div>
 
-
       <div class="form-group">
+   
+      <input id="phone" type="tel" name="phone" class="form-control" placeholder="Numero de telefono"/>
+
+      </div>
+      
+      <div class="form-group">
+        <input type="file" accept="image/*" name="image" id="image"/>
+      </div>
+
+       <link
+     rel="stylesheet"
+     href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css"
+   />
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/intlTelInput.min.js"></script>
+<script>
+const phoneInputField = document.querySelector("#phone");
+   const phoneInput = window.intlTelInput(phoneInputField, {
+     utilsScript:
+       "https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/utils.js",
+   });
+function process(event) {
+ event.preventDefault();
+
+ const phoneNumber = phoneInput.getNumber();
+ phoneInputField.value = phoneNumber
+ const form = document.getElementById("form")
+  form.submit();
+}
+ </script>
+       <div class="form-group">
         <input class="btn btn-success my-3" type="submit" value="Register" />
       </div>
+
     </form>
 
     <hr />
