--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,8 +9,9 @@
    />
    <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/intlTelInput.min.js"></script>
 
-    <title>Document</title>
+    <title>LG</title>
   </head>
+  
   <body>
         {{{body}}}
      
