--- a/views/login.hbs
+++ b/views/login.hbs
@@ -18,7 +18,7 @@
           placeholder="email"
           class="form-control"
           type="text"
-          required
+          {{!-- required --}}
         />
       </div>
 
@@ -29,7 +29,7 @@
           placeholder="password"
           class="form-control"
           type="password"
-          required
+          {{!-- required --}}
         />
       </div>
 
