--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -15,10 +15,8 @@
       <i class="fas fa-bars"></i>
     </button>
 
-    <!-- Collapsible wrapper -->
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <!-- Navbar brand -->
-      <a class="navbar-brand mt-2 mt-lg-0" href="#">
+      <a class="navbar-brand mt-2 mt-lg-0" href="/inicio">
         <img
           src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/bf/LG_logo_%282015%29.svg/2560px-LG_logo_%282015%29.svg.png"
           height="75"
@@ -29,20 +27,20 @@
 
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="#">Televisores</a>
+          <a class="nav-link" href="/televisores">Televisores</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Celulares</a>
+          <a class="nav-link" href="/celulares">Celulares</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Notebook</a>
+          <a class="nav-link" href="/notebook">Notebook</a>
         </li>
       </ul>
 
     </div>
     <div class="d-flex align-items-center">
       <a class="link-secondary me-3" href="#">
-        <i class="fas fa-shopping-cart"></i>
+        <i class="fas fa-shopping-cart" onclick="location.href = '/carrito'"></i></i>
       </a>
       
       <div class="dropdown">
