--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -40,7 +40,7 @@
     </div>
     <div class="d-flex align-items-center">
       <a class="link-secondary me-3" href="#">
-        <i class="fas fa-shopping-cart" onclick="location.href = '/carrito'"></i></i>
+        <i class="fas fa-shopping-cart" onclick="location.href = '/checkout/carrito'"></i></i>
       </a>
       
       <div class="dropdown">
